--- a/src/components/styles/PendingRegistrations.scss
+++ b/src/components/styles/PendingRegistrations.scss
@@ -8,7 +8,7 @@
     margin-bottom: 25px;
   }
   .table-header {
-    background-color: #1D143A;
+    background-color: #1B164E;
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
@@ -131,7 +131,7 @@
   top: 2px;
   width: 5px;
   height: 10px;
-  border: solid #1D143A;
+  border: solid #1B164E;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
