--- a/src/components/styles/join.css
+++ b/src/components/styles/join.css
@@ -1,5 +1,5 @@
 .rmsc {
-  --rmsc-main: #1D143A !important;
+  --rmsc-main: #1B164E !important;
   --rmsc-hover: #f1f3f5;
   --rmsc-selected: #e2e6ea;
   --rmsc-border: #ccc;
